security_groups.tf
#------------------------security-groups-------------------------------------------------

resource "aws_security_group" "i-m-web_sg" {
  name        = "Dynamic Security Group"
  description = "Dynamic Security Group for asg website"
  vpc_id      = aws_vpc.i_m_web.id

  dynamic "ingress" {
    for_each = var.ports
    content {
      from_port   = ingress.value
      to_port     = ingress.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "I_M_DYNAMIC_SG"
  }
}

variable "ports" {
  type    = list
  default = ["80", "443", "22", "9100"]
}

resource "aws_security_group" "prometheus_sg" {
  name        = "Prometheus SG"
  description = "Prometheus SG"
  vpc_id      = aws_vpc.i_m_web.id

  ingress {
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9100
    to_port     = 9100
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Prometheus-SG"
  }
}

resource "aws_security_group" "jenkins_sg" {
  name        = "Jenkins SG"
  description = "Jenkins SG"
  vpc_id      = aws_vpc.i_m_web.id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    from_port   = 50000
    to_port     = 50000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "jenkins-SG"
  }
}
